--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Musei/platforms/ios/Musei.xcodeproj/xcuserdata/andreazanni.xcuserdatad/xcschemes
 Musei/platforms/ios/Musei.xcodeproj/project.xcworkspace/xcuserdata/andreazanni.xcuserdatad/UserInterfaceState.xcuserstate
 Musei/platforms/ios/CordovaLib/CordovaLib.xcodeproj/xcuserdata/andreazanni.xcuserdatad/xcschemes/xcschememanagement.plist
 Musei/.DS_Store
+Musei/platforms/ios/Musei.xcodeproj/project.xcworkspace/xcuserdata/andreazanni.xcuserdatad/UserInterfaceState.xcuserstate
+Musei/platforms/ios/CordovaLib/CordovaLib.xcodeproj/xcuserdata/andreazanni.xcuserdatad/xcschemes/xcschememanagement.plist
+Musei/platforms/ios/Musei.xcodeproj/project.xcworkspace/xcuserdata/andreazanni.xcuserdatad/UserInterfaceState.xcuserstate
+Musei/platforms/ios/Musei.xcodeproj/xcuserdata/andreazanni.xcuserdatad/xcschemes/xcschememanagement.plist
