--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ Musei/platforms/ios/Musei.xcodeproj/project.xcworkspace/xcuserdata/andreazanni.x
 Musei/platforms/ios/Musei.xcodeproj/xcuserdata/andreazanni.xcuserdatad/xcschemes/xcschememanagement.plist
 Musei/www/build/main.js
 Musei/www/build/vendor.js.map
+Musei/.sourcemaps/main.js.map
+Musei/www/build/main.js
+Musei/www/build/main.js.map
+Musei/www/build/vendor.js.map
