ignore android files

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ Musei/.sourcemaps/main.js.map
 Musei/www/build/main.js
 Musei/www/build/main.js.map
 Musei/www/build/vendor.js.map
+Musei/platforms/android/.gradle/3.3/taskArtifacts/fileHashes.bin
+Musei/platforms/android/.gradle/3.3/taskArtifacts/fileSnapshots.bin
+Musei/platforms/android/.gradle/3.3/taskArtifacts/taskArtifacts.bin
+Musei/platforms/android/.gradle/3.3/taskArtifacts/taskArtifacts.lock
+Musei/platforms/android/assets/www/build/main.js
+Musei/platforms/android/assets/www/build/vendor.js.map
