--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Musei/platforms/android/.gradle/3.3/taskArtifacts/taskArtifacts.bin
 Musei/platforms/android/.gradle/3.3/taskArtifacts/taskArtifacts.lock
 Musei/platforms/android/assets/www/build/main.js
 Musei/platforms/android/assets/www/build/vendor.js.map
+Musei/platforms/android/.gradle/3.3/taskArtifacts/fileHashes.bin
+Musei/platforms/android/.gradle/3.3/taskArtifacts/taskArtifacts.lock
