Chiamate verso omniservicetest

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ Musei/platforms/android/assets/www/build/main.js
 Musei/platforms/android/assets/www/build/vendor.js.map
 Musei/platforms/android/.gradle/3.3/taskArtifacts/fileHashes.bin
 Musei/platforms/android/.gradle/3.3/taskArtifacts/taskArtifacts.lock
+Musei/platforms/android/.gradle/3.3/taskArtifacts/fileHashes.bin
+Musei/platforms/android/assets/www/build/vendor.js.map
+Musei/platforms/android/assets/www/build/main.js.map
+Musei/platforms/android/assets/www/build/main.js
+Musei/platforms/android/assets/www/build/main.css
+Musei/platforms/android/.gradle/3.3/taskArtifacts/taskArtifacts.lock
+Musei/platforms/android/.gradle/3.3/taskArtifacts/taskArtifacts.bin
+Musei/platforms/android/.gradle/3.3/taskArtifacts/fileSnapshots.bin
