--- a/Musei/package.json
+++ b/Musei/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/social-sharing": "^4.12.2",
     "@ionic-native/splash-screen": "^4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
+    "@ionic-native/text-to-speech": "^4.16.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.5",
@@ -32,6 +33,7 @@
     "cordova-plugin-ionic-webview": "^2.1.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-tts": "^0.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "es6-promise-plugin": "^4.2.2",
@@ -54,7 +56,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-tts": {}
     },
     "platforms": [
       "ios",
