--- a/Musei/package.json
+++ b/Musei/package.json
@@ -52,6 +52,7 @@
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "cordova-universal-clipboard": "git+https://github.com/Visigo/CordovaClipboard.git",
     "cordova.plugins.diagnostic": "^4.0.10",
+    "css-animator": "^2.3.1",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
